--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 
 <body>
-    
+
     <header class="header">
         <div class="container-header">
             <div class="logo">
@@ -22,7 +23,7 @@
                 </a>
             </div>
             <div class="titulo">
-                <h1>VM WoodWorking</h1>
+                <h1 class="responsive-title">VM WoodWorking</h1>
             </div>
             <div class="searchbar">
                 <form action="/buscar" method="get">
@@ -47,40 +48,83 @@
     <main class="main-contenido-principal">
         <nav class="fondo">
             <h3>Trabajos conceptuales en madera</h3>
-             <div id="carouselExampleIndicators" class="carousel slide">
+            <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                        aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                        aria-label="Slide 5"></button>
                 </div>
                 <div class="carousel-inner d-flex justify-content-lg-evenly ">
-                  <div class="carousel-item active">
-                    <img src="./img/8_Miniaturas_1.jpg" class="d-block w-25 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagen conjunto 1">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./img/1_Earl_Vikingo_1.jpg" class="d-block w-25 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagen earl">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./img/9_Caballero_2.jpg" class="d-block w-25 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagen conjunto 2">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./img/13_Detalle_1.jpg" class="d-block w-25 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagen detalle 1">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./img/14_Florero.jpg" class="d-block w-25 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagne florero">
-                  </div>
+                    <div class="carousel-item active">
+                        <img src="./img/8_Miniaturas_1.jpg" class="d-block w-25 mb-5 shadow p-3 mb-5 bs-body-color"
+                            alt="imagen conjunto 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/1_Earl_Vikingo_1.jpg" class="d-block w-25 mb-5 shadow p-3 mb-5 bs-body-color"
+                            alt="imagen earl">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/9_Caballero_2.jpg" class="d-block w-25 mb-5 shadow p-3 mb-5 bs-body-color"
+                            alt="imagen conjunto 2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/13_Detalle_1.jpg" class="d-block w-25 mb-5 shadow p-3 mb-5 bs-body-color"
+                            alt="imagen detalle 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/14_Florero.jpg" class="d-block w-25 mb-5 shadow p-3 mb-5 bs-body-color"
+                            alt="imagne florero">
+                    </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
                 </button>
-              </div>
+            </div>
+            <nav class="titulo-4">
+                <div class="texto-container">
+                    <h4>La idealización de las figuras y los roles fundamentales de una sociedad del medievo</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui quaerat repellendus aspernatur
+                        tempore
+                        et quasi ut reprehenderit voluptates ad quibusdam, quo dolorum sint maxime eum at ullam
+                        provident
+                        vitae obcaecati.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid inventore obcaecati libero
+                        ducimus! Inventore laboriosam culpa similique nisi, animi quaerat sit voluptatem blanditiis enim
+                        quis, distinctio, adipisci vero! Ipsum, iusto.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla voluptatum dicta non,
+                        voluptatibus
+                        assumenda natus velit vel soluta sint quibusdam. Consequuntur esse quis quaerat eveniet, porro
+                        eaque
+                        ratione minus dicta.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis illum autem quas repellat totam
+                        nobis ipsam necessitatibus architecto deserunt! Aliquid optio possimus veritatis alias,
+                        inventore
+                        autem corrupti debitis modi quaerat?
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam deserunt unde facilis expedita
+                        facere
+                        odit, aspernatur maxime exercitationem dolor labore ipsa. Excepturi eligendi porro magni
+                        corrupti
+                        nulla dicta debitis optio.
+                    </p>
+                </div>
+                <nav class="imagen-ladera-titulo-4">
+                    <img src="./img/12_Conjunto_1.jpg" alt="Conjunto 1">
+                </nav>
+            </nav>
         </nav>
     </main>
 
@@ -125,6 +169,9 @@
             </form>
         </nav>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
