solucione tamano del title responsive

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                 </a>
             </div>
             <div class="titulo">
-                <h1 class="responsive-title">VM WoodWorking</h1>
+                <nav class="container-title">
+                    <h1 class="responsive-title">VM WoodWorking</h1>
+                </nav>
             </div>
             <div class="searchbar">
                 <form action="/buscar" method="get">
