--- a/index.html
+++ b/index.html
@@ -65,24 +65,24 @@
                 </div>
                 <div class="carousel-inner d-flex justify-content-lg-evenly ">
                     <div class="carousel-item active">
-                        <img src="./img/8_Miniaturas_1.jpg" class="d-block w-25 mb-5 shadow p-3 mb-5 bs-body-color"
-                            alt="imagen conjunto 1">
+                        <img src="./img/8_Miniaturas_1.jpg"
+                            class="d-block img-fluid w-25 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagen conjunto 1">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/1_Earl_Vikingo_1.jpg" class="d-block w-25 mb-5 shadow p-3 mb-5 bs-body-color"
-                            alt="imagen earl">
+                        <img src="./img/1_Earl_Vikingo_1.jpg"
+                            class="d-block img-fluid w-25 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagen earl">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/9_Caballero_2.jpg" class="d-block w-25 mb-5 shadow p-3 mb-5 bs-body-color"
-                            alt="imagen conjunto 2">
+                        <img src="./img/9_Caballero_2.jpg"
+                            class="d-block img-fluid w-25 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagen conjunto 2">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/13_Detalle_1.jpg" class="d-block w-25 mb-5 shadow p-3 mb-5 bs-body-color"
-                            alt="imagen detalle 1">
+                        <img src="./img/13_Detalle_1.jpg"
+                            class="d-block img-fluid w-25 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagen detalle 1">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/14_Florero.jpg" class="d-block w-25 mb-5 shadow p-3 mb-5 bs-body-color"
-                            alt="imagne florero">
+                        <img src="./img/14_Florero.jpg"
+                            class="d-block img-fluid w-25 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagne florero">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -131,45 +131,53 @@
     </main>
 
     <footer class="footer">
-        <nav class="contenedor-menu-footer">
-            <ul class="menu-footer">
-                <li class="menu-item">
-                    <i class="fab fa-instagram"></i>
-                    <a href="https://www.instagram.com/victorhugomangold/" target="_blank">Instagram</a>
-                </li>
-                <li class="menu-item">
-                    <i class="fab fa-facebook"></i>
-                    <a href="https://www.facebook.com/victorhugo.mangold" target="_blank">Facebook</a>
-                </li>
-                <li class="menu-item">
-                    <i class="fab fa-twitter"></i>
-                    <a href="#">Twitter</a>
-                </li>
-            </ul>
-        </nav>
-        <div class="mapa-container">
-            <div>
-                <p class="footer-bottom-text">Derechos de autor © 2023 VM WoodWorks. Todos los derechos reservados.</p>
-            </div>
-            <iframe class="mapa"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d54358.90165914671!2d-60.70378567372013!3d-31.62203794835163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9adc40888e1%3A0xdcf7761e8d02804a!2sSanta%20Fe%20de%20la%20Vera%20Cruz%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1690327235312!5m2!1ses!2sar"
-                width="250" height="150" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">Locación</iframe>
+        <div class="contenedor-menu-footer-grande">
+            <nav class="contenedor-menu-footer">
+                <div class="redes-sociales">
+                    <ul class="menu-footer">
+                        <li class="menu-item">
+                            <i class="fab fa-instagram"></i>
+                            <a href="https://www.instagram.com/victorhugomangold/" target="_blank">Instagram</a>
+                        </li>
+                        <li class="menu-item">
+                            <i class="fab fa-facebook"></i>
+                            <a href="https://www.facebook.com/victorhugo.mangold" target="_blank">Facebook</a>
+                        </li>
+                        <li class="menu-item">
+                            <i class="fab fa-twitter"></i>
+                            <a href="#">Twitter</a>
+                        </li>
+                    </ul>
+            </nav>
         </div>
-        <nav class="inicio-sesion-footer">
-            <form action="?" method="get">
-                <div class="input-group">
-                    <label>USUARIO</label>
-                    <input type="text">
-                    <label>CONTRASEÑA</label>
-                    <input type="password">
+        <div class="mapa-copyr">
+            <div class="mapa-container">
+                <div>
+                    <p class="footer-bottom-text">Derechos de autor © 2023 VM WoodWorks. Todos los derechos reservados.
+                    </p>
                 </div>
-                <div class="buttons-session-footer">
-                    <input type="button" value="Ingresar">
-                    <input type="button" value="Reset">
-                </div>
-            </form>
-        </nav>
+                <iframe class="mapa"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d54358.90165914671!2d-60.70378567372013!3d-31.62203794835163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9adc40888e1%3A0xdcf7761e8d02804a!2sSanta%20Fe%20de%20la%20Vera%20Cruz%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1690327235312!5m2!1ses!2sar"
+                    width="250" height="150" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">Locación</iframe>
+            </div>
+        </div>
+        <div class="log-inicio-foot">
+            <nav class="inicio-sesion-footer">
+                <form action="?" method="get">
+                    <div class="input-group">
+                        <label>USUARIO</label>
+                        <input type="text">
+                        <label>CONTRASEÑA</label>
+                        <input type="password">
+                    </div>
+                    <div class="buttons-session-footer">
+                        <input type="button" value="Ingresar">
+                        <input type="button" value="Reset">
+                    </div>
+                </form>
+            </nav>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
