--- a/pages/autor.html
+++ b/pages/autor.html
@@ -45,20 +45,6 @@
     <main>
         <nav class="fondo">
             <h2>Sobre el Autor</h2>
-            <!-- <img class="perfil" src="../img/Perfil-Trabajo1.jpg" alt="Perfil_escultor">
-            <iframe width="300" height="500" src="https://www.youtube.com/embed/fjagtf6Wr90" title="Video Trabajo Perfil Escultor" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <video class="video-perfil">
-                    <source src="https://www.youtube.com/shorts/fjagtf6Wr90" type="video/mp4">
-                </video>
-            </a>
-            <br>
-            <nav class="texto-perfil">
-                <p>Desde la juventud, el escultor trabaja la madera en sintonía a la idea que lo mueve.</p>
-                <p>El proceso conlleva diversas aristas, siendo la idea prístina la vela que permite navegar
-                    creativamente</p>
-                <p>No cualquiera madera permite el trabajo en detalle, priorizando así materiales de la zona como el
-                    fresno, paraíso y palo borracho mayoritariamente</p> -->
-
             <div class="container-perfil-autor">
                 <div class="foto-perfil">
                     <img class="perfil" src="../img/Perfil-Trabajo1.jpg" alt="Perfil_escultor">
@@ -101,45 +87,53 @@
     </main>
 
     <footer class="footer">
-        <nav class="contenedor-menu-footer">
-            <ul class="menu-footer">
-                <li class="menu-item">
-                    <i class="fab fa-instagram"></i>
-                    <a href="https://www.instagram.com/victorhugomangold/" target="_blank">Instagram</a>
-                </li>
-                <li class="menu-item">
-                    <i class="fab fa-facebook"></i>
-                    <a href="https://www.facebook.com/victorhugo.mangold" target="_blank">Facebook</a>
-                </li>
-                <li class="menu-item">
-                    <i class="fab fa-twitter"></i>
-                    <a href="#">Twitter</a>
-                </li>
-            </ul>
-        </nav>
-        <div class="mapa-container">
-            <div>
-                <p class="footer-bottom-text">Derechos de autor © 2023 VM WoodWorks. Todos los derechos reservados.</p>
-            </div>
-            <iframe class="mapa"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d54358.90165914671!2d-60.70378567372013!3d-31.62203794835163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9adc40888e1%3A0xdcf7761e8d02804a!2sSanta%20Fe%20de%20la%20Vera%20Cruz%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1690327235312!5m2!1ses!2sar"
-                width="250" height="150" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">Locación</iframe>
+        <div class="contenedor-menu-footer-grande">
+            <nav class="contenedor-menu-footer">
+                <div class="redes-sociales">
+                    <ul class="menu-footer">
+                        <li class="menu-item">
+                            <i class="fab fa-instagram"></i>
+                            <a href="https://www.instagram.com/victorhugomangold/" target="_blank">Instagram</a>
+                        </li>
+                        <li class="menu-item">
+                            <i class="fab fa-facebook"></i>
+                            <a href="https://www.facebook.com/victorhugo.mangold" target="_blank">Facebook</a>
+                        </li>
+                        <li class="menu-item">
+                            <i class="fab fa-twitter"></i>
+                            <a href="#">Twitter</a>
+                        </li>
+                    </ul>
+            </nav>
         </div>
-        <nav class="inicio-sesion-footer">
-            <form action="?" method="get">
-                <div class="input-group">
-                    <label>USUARIO</label>
-                    <input type="text">
-                    <label>CONTRASEÑA</label>
-                    <input type="password">
+        <div class="mapa-copyr">
+            <div class="mapa-container">
+                <div>
+                    <p class="footer-bottom-text">Derechos de autor © 2023 VM WoodWorks. Todos los derechos reservados.
+                    </p>
                 </div>
-                <div class="buttons-session-footer">
-                    <input type="button" value="Ingresar">
-                    <input type="button" value="Reset">
-                </div>
-            </form>
-        </nav>
+                <iframe class="mapa"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d54358.90165914671!2d-60.70378567372013!3d-31.62203794835163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9adc40888e1%3A0xdcf7761e8d02804a!2sSanta%20Fe%20de%20la%20Vera%20Cruz%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1690327235312!5m2!1ses!2sar"
+                    width="250" height="150" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">Locación</iframe>
+            </div>
+        </div>
+        <div class="log-inicio-foot">
+            <nav class="inicio-sesion-footer">
+                <form action="?" method="get">
+                    <div class="input-group">
+                        <label>USUARIO</label>
+                        <input type="text">
+                        <label>CONTRASEÑA</label>
+                        <input type="password">
+                    </div>
+                    <div class="buttons-session-footer">
+                        <input type="button" value="Ingresar">
+                        <input type="button" value="Reset">
+                    </div>
+                </form>
+            </nav>
+        </div>
     </footer>
 </body>
 
