--- a/index.html
+++ b/index.html
@@ -63,26 +63,26 @@
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
                         aria-label="Slide 5"></button>
                 </div>
-                <div class="carousel-inner d-flex justify-content-lg-evenly ">
+                <div class="carousel-inner d-flex justify-content-lg-evenly mx-auto">
                     <div class="carousel-item active">
                         <img src="./img/8_Miniaturas_1.jpg"
-                            class="d-block img-fluid w-25 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagen conjunto 1">
+                            class="d-flex img-fluid w-50 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagen conjunto 1">
                     </div>
                     <div class="carousel-item">
                         <img src="./img/1_Earl_Vikingo_1.jpg"
-                            class="d-block img-fluid w-25 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagen earl">
+                            class="d-flex img-fluid w-50 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagen earl">
                     </div>
                     <div class="carousel-item">
                         <img src="./img/9_Caballero_2.jpg"
-                            class="d-block img-fluid w-25 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagen conjunto 2">
+                            class="d-flex img-fluid w-50 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagen conjunto 2">
                     </div>
                     <div class="carousel-item">
                         <img src="./img/13_Detalle_1.jpg"
-                            class="d-block img-fluid w-25 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagen detalle 1">
+                            class="d-flex img-fluid w-50 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagen detalle 1">
                     </div>
                     <div class="carousel-item">
                         <img src="./img/14_Florero.jpg"
-                            class="d-block img-fluid w-25 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagne florero">
+                            class="d-flex img-fluid w-50 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagne florero">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -152,10 +152,9 @@
         </div>
         <div class="mapa-copyr">
             <div class="mapa-container">
-                <div>
-                    <p class="footer-bottom-text">Derechos de autor © 2023 VM WoodWorks. Todos los derechos reservados.
-                    </p>
-                </div>
+                <nav class="contendor-derechos">
+                    <p class="footer-bottom-text">Derechos de autor © 2023 VM WoodWorks. Todos los derechos reservados.</p>
+                </nav>
                 <iframe class="mapa"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d54358.90165914671!2d-60.70378567372013!3d-31.62203794835163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9adc40888e1%3A0xdcf7761e8d02804a!2sSanta%20Fe%20de%20la%20Vera%20Cruz%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1690327235312!5m2!1ses!2sar"
                     width="250" height="150" style="border:0;" allowfullscreen="" loading="lazy"
