cambios en la seccion de autor para el responsive

--- a/index.html
+++ b/index.html
@@ -50,51 +50,56 @@
     <main class="main-contenido-principal">
         <nav class="fondo">
             <h3>Trabajos conceptuales en madera</h3>
-            <div id="carouselExampleIndicators" class="carousel slide">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                        class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-                        aria-label="Slide 4"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-                        aria-label="Slide 5"></button>
+            <div class="container">
+                <div id="carouselExampleIndicators" class="carousel slide">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                            aria-label="Slide 4"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                            aria-label="Slide 5"></button>
+                    </div>
+                    <div class="carousel-inner d-block justify-content-lg-evenly mx-auto">
+                        <div class="carousel-item active">
+                            <img src="./img/8_Miniaturas_1.jpg"
+                                class="d-block img-fluid w-100 mb-5 shadow p-3 mb-5 bs-body-color"
+                                alt="imagen conjunto 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./img/1_Earl_Vikingo_1.jpg"
+                                class="d-block img-fluid w-100 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagen earl">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./img/9_Caballero_2.jpg"
+                                class="d-block img-fluid w-100 mb-5 shadow p-3 mb-5 bs-body-color"
+                                alt="imagen conjunto 2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./img/13_Detalle_1.jpg"
+                                class="d-block img-fluid w-100 mb-5 shadow p-3 mb-5 bs-body-color"
+                                alt="imagen detalle 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./img/14_Florero.jpg"
+                                class="d-block img-fluid w-100 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagne florero">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <div class="carousel-inner d-flex justify-content-lg-evenly mx-auto">
-                    <div class="carousel-item active">
-                        <img src="./img/8_Miniaturas_1.jpg"
-                            class="d-flex img-fluid w-50 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagen conjunto 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./img/1_Earl_Vikingo_1.jpg"
-                            class="d-flex img-fluid w-50 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagen earl">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./img/9_Caballero_2.jpg"
-                            class="d-flex img-fluid w-50 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagen conjunto 2">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./img/13_Detalle_1.jpg"
-                            class="d-flex img-fluid w-50 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagen detalle 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./img/14_Florero.jpg"
-                            class="d-flex img-fluid w-50 mb-5 shadow p-3 mb-5 bs-body-color" alt="imagne florero">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
             <nav class="titulo-4">
                 <div class="texto-container">
@@ -153,7 +158,8 @@
         <div class="mapa-copyr">
             <div class="mapa-container">
                 <nav class="contendor-derechos">
-                    <p class="footer-bottom-text">Derechos de autor © 2023 VM WoodWorks. Todos los derechos reservados.</p>
+                    <p class="footer-bottom-text">Derechos de autor © 2023 VM WoodWorks. Todos los derechos reservados.
+                    </p>
                 </nav>
                 <iframe class="mapa"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d54358.90165914671!2d-60.70378567372013!3d-31.62203794835163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5a9adc40888e1%3A0xdcf7761e8d02804a!2sSanta%20Fe%20de%20la%20Vera%20Cruz%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1690327235312!5m2!1ses!2sar"
