--- a/pages/autor.html
+++ b/pages/autor.html
@@ -46,20 +46,20 @@
         <nav class="fondo">
             <h2>Sobre el Autor</h2>
             <div class="container-perfil-autor">
-                <div class="foto-perfil">
+                <div class="elemento foto-perfil">
                     <img class="perfil" src="../img/Perfil-Trabajo1.jpg" alt="Perfil_escultor">
                 </div>
-                <div class="video-perfil">
-                    <iframe width="300" height="500" src="https://www.youtube.com/embed/fjagtf6Wr90"
+                <div class="elemento video-perfil">
+                    <iframe class="video-perfil-1" width="300" height="500" src="https://www.youtube.com/embed/fjagtf6Wr90"
                         title="Video Trabajo Perfil Escultor" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen>
                     </iframe>
                 </div>
-                <div class="foto-perfil">
+                <div class="elemento foto-perfil-2">
                     <img class="perfil" src="../img/13_Detalle_1.jpg" alt="Perfil_escultor_2">
                 </div>
-                <div class="texto-1">
+                <div class="elemento small-text">
                     <nav class="texto-perfil">
                         <p>Desde la juventud, el escultor trabaja la madera en sintonía a la idea que lo mueve.</p>
                         <p>El proceso conlleva diversas aristas, siendo la idea prístina la vela que permite navegar
@@ -69,21 +69,15 @@
                             fresno, paraíso y palo borracho mayoritariamente</p>
                     </nav>
                 </div>
-                <div class="texto-2">
+                <div class="elemento small-text">
                     <nav class="texto-perfil">
                         <p>Desde la juventud, el escultor trabaja la madera en sintonía a la idea que lo mueve.</p>
                         <p>El proceso conlleva diversas aristas, siendo la idea prístina la vela que permite navegar
                             creativamente</p>
-
                     </nav>
                 </div>
             </div>
-
         </nav>
-        </nav>
-
-
-
     </main>
 
     <footer class="footer">
